[package]
name = "microbit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "messaging"
test = false
bench = false

[dependencies]
handlebars = "5.1.2"
iced = "0.12.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serialport = "4.4.0"
tokio = { verion = "1.38.0", features = ["full"] }
warp = "0.3.7"
